# wsclean

chgcentre/: CMakeLists.txt  banddata.h  main.cpp  multibanddata.h
chgcentre/pack/: .gitignore  pack.sh
wsclean/: .gitignore  CMakeLists.txt  CMakeVersionInfo.txt  Doxyfile.in  angle.h  application.h  areaset.h  banddata.h  buffered_lane.h  casamaskreader.h  dftpredictionalgorithm.cpp  dftpredictionalgorithm.h  fftconvolver.cpp  fftconvolver.h  fftresampler.cpp  fftresampler.h  fftwmanager.cpp  fftwmanager.h  fftwmultithreadenabler.cpp  fftwmultithreadenabler.h  fitsiochecker.h  fitsreader.cpp  fitsreader.h  fitswriter.cpp  fitswriter.h  gaussianfitter.cpp  gaussianfitter.h  image.cpp  image.h  imageoperations.h  imageweights.cpp  imageweights.h  matrix2x2.h  modelrenderer.cpp  modelrenderer.h  msselection.h  multibanddata.cpp  multibanddata.h  ndppp.h  nlplfitter.cpp  (+24 more)
wsclean/aocommon/: barrier.h  cloned_ptr.h  lane.h  lane_11.h  parallel_for.h  parallelfor.h  uvector_11.h
wsclean/atca/: atcabeam.cpp  atcabeam.h
wsclean/aterms/: atermbase.cpp  atermbase.h  atermbeam.h  atermconfig.h  atermstub.h  cache.cpp  cache.h  fitsaterm.cpp  fitsaterm.h  lofarbeamterm.cpp  lofarbeamterm.h  mwabeamterm.cpp  mwabeamterm.h  telescope.h
wsclean/deconvolution/: clarkloop.cpp  clarkloop.h  componentlist.cpp  componentlist.h  deconvolution.cpp  deconvolution.h  deconvolutionalgorithm.cpp  deconvolutionalgorithm.h  dynamicjoinedclean.h  dynamicset.cpp  dynamicset.h  fastmultiscaleclean.cpp  fastmultiscaleclean.h  genericclean.cpp  genericclean.h  imageset.cpp  imageset.h  iuwtdeconvolution.h  joinedclean.cpp  joinedclean.h  lsdeconvolution.cpp  lsdeconvolution.h  moresane.cpp  moresane.h  paralleldeconvolution.cpp  paralleldeconvolution.h  simpleclean.cpp  simpleclean.h  spectralfitter.cpp  spectralfitter.h  spectralimagefitter.h  subdivision.h
wsclean/idg/: dummygridder.h  idgconfiguration.h  idgmsgridder.cpp  idgmsgridder.h  interface.h
wsclean/interface/: .gitignore  _wsclean.c  example.py  imaginginterface.h  interfaceexample.c  pywsclean.py  setup.py  wscleaninterface.cpp  wscleaninterface.h
wsclean/iuwt/: imageanalysis.cpp  imageanalysis.h  iuwtdeconvolutionalgorithm.cpp  iuwtdeconvolutionalgorithm.h
wsclean/lofar/: lbeamevaluator.cpp  lbeamevaluator.h  lbeamimagemaker.cpp  lbeamimagemaker.h  lmspredicter.cpp  lmspredicter.h  lofarbeamkeywords.h
wsclean/model/: areaparser.h  measuredsed.h  measurement.h  model.cpp  model.h  modelcomponent.h  modelparser.h  modelsource.h  powerlawsed.h  spectralenergydistribution.h  tokenizer.h
wsclean/msproviders/: averagingmsrowprovider.cpp  averagingmsrowprovider.h  contiguousms.cpp  contiguousms.h  directmsrowprovider.cpp  directmsrowprovider.h  msprovider.cpp  msprovider.h  msrowprovider.cpp  msrowprovider.h  noisemsrowprovider.h  partitionedms.cpp  partitionedms.h  synchronizedms.cpp  synchronizedms.h
wsclean/multiscale/: clarkloop.cpp  clarkloop.h  mscaleexample.cpp  multiscalealgorithm.cpp  multiscalealgorithm.h  multiscaletransforms.cpp  multiscaletransforms.h  threadeddeconvolutiontools.cpp  threadeddeconvolutiontools.h
wsclean/mwa/: beam2016implementation.cpp  beam2016implementation.h  factorialtable.h  mwabeam.cpp  mwabeam.h  tilebeam2016.cpp  tilebeam2016.h  tilebeambase.cpp  tilebeambase.h
wsclean/pack/: .gitignore  pack.sh
wsclean/tests/: test.cpp  testbanddata.cpp  testbaselinedependentaveraging.cpp  testclean.cpp  testcomponentlist.cpp  testfitsdateobstime.cpp  testfluxdensity.cpp  testgaussianfitter.cpp  testimage.cpp  testimagebufferallocator.cpp  testimageset.cpp  testmatrix2x2.cpp  testparsetreader.cpp  testpolynomialchannelfitter.cpp  testpolynomialfitter.cpp  testradeccoord.cpp
wsclean/units/: angle.h  fluxdensity.h  radeccoord.h
wsclean/wsclean/: binneduvgrid.h  binneduvoutput.h  cachedimageset.h  commandline.cpp  commandline.h  directmsgridder.cpp  directmsgridder.h  griddingtaskmanager.cpp  griddingtaskmanager.h  gridmodeenum.h  imagebufferallocator.h  imagefilename.h  imageoperations.cpp  imageoperations.h  imageweightcache.h  imagingtable.cpp  imagingtable.h  inversionalgorithm.h  lofarcentroidgridding.cpp  logger.cpp  logger.h  measurementsetgridder.h  msgridderbase.cpp  msgridderbase.h  observationinfo.h  outputchannelinfo.h  primarybeam.cpp  primarybeam.h  primarybeamimageset.h  smallinversionoptimization.h  unavailablegridder.h  wscfitsfile.cpp  wscfitswriter.cpp  wscfitswriter.h  wsclean.cpp  wsclean.h  wscleansettings.cpp  wscleansettings.h  wsmsgridder.cpp  wsmsgridder.h  (+2 more)
wsclean/wsclean/examples/: Makefile  wspredictionexample.cpp  wsuvbinning.cpp
